--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,6 +5,7 @@
 body{
     background-color: rgba(5, 5, 37, 0.932);
     color: white;
+    border: 0px;
 }
 .container-fluid {
     position: relative;
